--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,9 @@ body {
   width: 100vw;
   scrollbar-width: none;
   color: white;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 html::-webkit-scrollbar,
